--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,3 +1,43 @@
 .feed{
-    flex: 0.6;
+    width: 60%;
+    margin: 0 20px;
+}
+
+
+.feed-inputContainer{
+    background-color: white;
+    padding: 10px 10px 20px 10px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.feed-input{
+    border: 1px solid lightgray;
+    border-radius: 30px;
+    display: flex;
+    padding: 10px;
+    color: grey;
+    padding-left: 15px;
+}
+
+.feed-input > form{
+    display: flex;
+    width: 100%;
+}
+
+.feed-input > form >input{
+border: none;
+flex: 1;
+margin-left: 10px;
+outline-width: 0;
+font-weight: 600;
+}
+
+.feed-input > form > button{
+    display: none;
+}
+
+.feed-inputOptions{
+    display: flex;
+    justify-content: space-evenly;
 }
