--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar{
     position: sticky;
     top:80px;
-    flex:0.2;
+    width: 20%;
     border-radius: 10px;
     text-align: center;
     height: fit-content;
@@ -65,6 +65,7 @@
 .sidebar-statNumber{
     font-weight: bold;
     color: #0a66c2 !important;
+    margin-right: 10px;
 }
 
 .sidebar-bottom{
