Redux integration, Login page and functionality, Widget section

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
 
 .app-body{
     display: flex;
-    justify-content: left;
+    justify-content: center;
     width: 100%;
+    margin-top: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
     }
