--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar{
     position: sticky;
     top:80px;
-    width: 20%;
+    width: 0.2;
     border-radius: 10px;
     text-align: center;
     height: fit-content;
